--- a/project2/doc.html
+++ b/project2/doc.html
@@ -20,6 +20,16 @@
         <p>I have a working prototype of the project. The project has full functionality for calling the CheapShark API using controls to filter the results, and displaying the proper search results to the user.</p>
         <p>I am using <a href="https://fontawesome.com/">fontawesome.com</a> for the search icon and any other icons I may need.</p>
         <p>I am looking for feedback on the layout of the page. Ignoring the style (colors, font, etc.), I am seeking feedback and initial impressions on the layout to ensure nothing is confusing about the site's functionality.</p>
+        <h1>Post-Feedback</h1>
+        <p>After getting feedback from peers, they all seemed to agree that the layout of the content worked well. I did recieve a comment that the page felt too wide at full screen, so I gave it a maximum width of 1280 pixels and gave the site a background gradient.</p>
+        <p>After implementing styling changes, specifically colors, fonts, and some sizing/padding updates, I continued to update the layout of the page. Mainly, I found a way to get a higher resolution thumbnail image from steam, so I increased the size of the thumbnail images in the table. This also increased readability on mobile device widths.</p>
+        <p>I also recieved some feedback on the style from a friend who is a 4th year New Media Development student. He gave me some pointers that improved the page's alignment and spacing.</p>
+        <h1>Resources</h1>
+        <p><a href="https://apidocs.cheapshark.com/">apidocs.cheapshark.com/</a> was the API used for this project.</p>
+        <p><a href="https://www.w3schools.com/">w3schools.com</a> for general HTML/CSS/JS help.</p>
+        <p><a href="https://www.w3.org/">w3.org</a> for HTML/CSS validation.</p>
+        <p><a href="https://en.m.wikipedia.org/wiki/File:Steam_icon_logo.svg">en.m.wikipedia.org/wiki/File:Steam_icon_logo.svg</a> for the Steam logo.</p>
+        <p><a href="https://www.youtube.com/watch?v=czZ1PvNW5hk">youtube.com/watch?v=czZ1PvNW5hk</a> for creating a responsive HTML table.</p>
     </div>
 </body>
 </html>
