235 home page update

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <h2>- My 235 Projects -</h2>
         <section class="boxlist">
             <div class="box">
-                <p>Project 1</p>
+                <p><a href="https://people.rit.edu/jck7676/235/project1/" target="_blank">Project 1</a></p>
             </div>
             <div class="box">
-                <p>Project 2</p>
+                <p><a href="https://people.rit.edu/jck7676/235/project2/" target="_blank">Project 2</a></p>
             </div>
             <div class="box">
                 <p>Project 3</p>
