--- a/pixi-intro/pixi-intro-2.html
+++ b/pixi-intro/pixi-intro-2.html
@@ -1,41 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<title>PixiJS-2</title>
-	<script src="https://pixijs.download/release/pixi.min.js"></script>
-</head>
-<body>
-<script>
-const app = new PIXI.Application(
-    {
-	width: 600,
-	height: 400
-    }
-);
-document.body.appendChild(app.view); 
+  <head>
+    <meta charset="utf-8" />
+    <title>PixiJS-2</title>
+    <script src="https://pixijs.download/release/pixi.min.js"></script>
+  </head>
+  <body>
+    <script type="module">
+      const app = new PIXI.Application();
+      await app.init({ width: 640, height: 360 });
+      document.body.appendChild(app.canvas);
 
-// #1 - make a square
-// https://pixijs.download/release/docs/PIXI.Graphics.html
-const square = new PIXI.Graphics();
-square.beginFill(0xFF0000); 	// red in hexadecimal
-square.lineStyle(3,0xFFFF00,1); // lineWidth,color in hex, alpha
-square.drawRect(0,0,40,40); 	// x,y,width,height
-square.endFill();
-square.x = 25;
-square.y = 50;
-app.stage.addChild(square);  	// now you can see it
+      // #1 - Create a square
+      // https://pixijs.download/release/docs/scene.Graphics.html
+      const square = new PIXI.Graphics();
+      square.rect(0, 0, 40, 40); // x, y, width, height
+      square.fill(0xff0000); // red in hex
+      square.x = 25;
+      square.y = 50;
+      square.stroke({ width: 2, color: 0xffff00, alpha: 1 }); // yellow border
 
-// #2 make a circle
-let radius = 20;
-const circle = new PIXI.Graphics();
-circle.beginFill(0xFF0000);
-circle.drawCircle(0,0,radius);
-circle.endFill();
-circle.x = 125;
-circle.y = 50;
-app.stage.addChild(circle);
+      app.stage.addChild(square); // Add the square to the stage
 
-</script>
-</body>
+      // #2 - Create a circle
+      const circle = new PIXI.Graphics();
+      circle.circle(0, 0, 20);
+      circle.fill(0xff0000);
+      circle.x = 125;
+      circle.y = 50;
+
+      app.stage.addChild(circle);
+
+	  // #3 - Create a line
+		const line = new PIXI.Graphics();
+		line.moveTo(0, 0);
+		line.lineTo(590, 0);
+		line.stroke({ width: 4, color: 0xff0000 });
+		line.x = 5;
+		line.y = 100;
+
+		app.stage.addChild(line);
+
+		// #4 - Create a polygon
+		const poly = new PIXI.Graphics();
+		poly.moveTo(0, 0);
+		poly.lineTo(-100, 100);
+		poly.lineTo(100, 100);
+		poly.lineTo(0, 0);
+		poly.fill(0xff00ff);
+		poly.stroke({ width: 3, color: 0x00ff00, alpha: 1 });
+		poly.x = 125;
+		poly.y = 125;
+		app.stage.addChild(poly);
+    </script>
+  </body>
 </html>
