--- a/project3/about.html
+++ b/project3/about.html
@@ -14,21 +14,28 @@
             padding: 20px;
             margin: auto;
         }
+        img {
+            height: 400px;
+        }
     </style>
 </head>
 <body>
     <div id="content">
         <h1>Project 3 Proposal</h1>
         <ul>
-            <li><b>Name: </b>WANTED!</li>
-            <li><b>Concept: </b>This game is a recreation of the WANTED! minigame from New Super Mario Bros. and Super Mario 64 DS. The player is given a character to find a crowd of other characters and must click on the correct character while they all move around the screen.</li>
+            <li><b>Name: </b>Find this guy!</li>
+            <li><b>Concept: </b>This game is a recreation of the Wanted! minigame from New Super Mario Bros. and Super Mario 64 DS. The player is given a character to find a crowd of other characters and must click on the correct character while they all move around the screen.</li>
             <li><b>Genre: </b>Arcade / Score Attack</li>
             <li><b>Platform: </b>Desktop, mobile-friendly</li>
             <li><b>Story: </b>None</li>
-            <li><b>Aesthetics: </b></li>
+            <li><b>Aesthetics: </b>2D cartoon pixel art. 8-bit sound effects for correctly and incorrectly clicking on character heads.</li>
             <li><b>Gameplay: </b>Mouse click (keyboard & mouse) and touch (mobile). Player must click on the head of the character labeled as "Wanted" within the time limit. Title screen will have one line of text stating "Tap the wanted character before time runs out!"</li>
-            <li><b>Mockups: </b></li>
-            <li><b>Other: </b>Link to source images.</li>
+            <li>
+                <b>Mockups/Reference Images: </b><br>
+                <img src="media/mockup.png" alt="Gameplay mockup.">
+                <img src="media/200px-Wanted_NSMB_gameplay.webp" alt="Gameplay reference.">
+            </li>
+            <li><b>Other: </b><a href="https://www.mariowiki.com/Wanted!" title="Link to Wanted minigame wiki.">https://www.mariowiki.com/Wanted!</a></li>
             <li><b>About the developer: </b>My name is Jeremy Kotz. I'm a second year Game Design and Development student. I'm skilled in Game Design, Front-end Programming, and UI/UX Design.</li>
         </ul>
     </div>
